--- a/class_meetings/cm03-trees.Rmd
+++ b/class_meetings/cm03-trees.Rmd
@@ -26,7 +26,7 @@ A __decision stump__ is a decision on $Y$ based on the value of _one_ of the pre
 
 ![](cm03-trees_files/stump.png)
 
-(Attribution: Hyeju Jang, DSCI 571)
+(Image attribution: Hyeju Jang, DSCI 571)
 
 ## Learning procedure
 
