--- a/class_meetings/cm04-trees.Rmd
+++ b/class_meetings/cm04-trees.Rmd
@@ -39,5 +39,9 @@ Now that we know what a decision stump is, how can we choose the one that gives 
 
 ## LAB PORTION
 
+- Example with binary predictor. What would you choose under either case of the predictor?
+- What is the accuracy of your predictions, on the training set? (We're not bothering with validation/test sets).
+- Draw the decision stump.
+- Now consider fitting a decision stump to a continuous predictor. How would you decide where to make the split?
 - Why don't we want to fit a decision stump that results in the same decision being made in either case? (i.e., the same category being predicted). What distribution does the corresponding decision correspond to?
-
+- By inspecting the decision tree, draw a picture showing the learned decision tree when the maximum depth is  2.
