--- a/assignments/assignment1/assignment1.ipynb
+++ b/assignments/assignment1/assignment1.ipynb
@@ -271,7 +271,7 @@
    },
    "source": [
     "-----------------\n",
-    "__Attribution__: Much of this material was taken from DSCI 571"
+    "__Attribution__: Much of this material is from Mark Schmidt via CPSC 340."
    ]
   },
   {
