--- a/assignments/assignment2/assignment2.ipynb
+++ b/assignments/assignment2/assignment2.ipynb
@@ -232,7 +232,7 @@
    },
    "source": [
     "-----------------\n",
-    "__Attribution__: Much of this material was taken from DSCI 571"
+    "__Attribution__: Much of this material is from Mark Schmidt via CPSC 340."
    ]
   },
   {
