--- a/assignments/assignment3/assignment3.ipynb
+++ b/assignments/assignment3/assignment3.ipynb
@@ -357,7 +357,7 @@
    "metadata": {},
    "source": [
     "-----------------\n",
-    "__Attribution__: Much of this material was taken from DSCI 571 and DSCI 562"
+    "__Attribution__: Much of this material is from Mark Schmidt via CPSC 340."
    ]
   },
   {
