Add note on newness

--- a/class_meetings/cm01-intro.Rmd
+++ b/class_meetings/cm01-intro.Rmd
@@ -52,6 +52,8 @@ Introduce yourself! Let's hear about:
 
 ### About this course
 
+This is a brand new course! You can expect things to evolve as we progress.
+
 - Preview of the course website -- it contains all materials related to the course.
 - Preview of the syllabus
 
