add reminder to cm03 for feature selection

--- a/class_meetings/cm03-error.Rmd
+++ b/class_meetings/cm03-error.Rmd
@@ -8,3 +8,4 @@ output: github_document
 - Generalization error
 - Training, validation, and test sets
 - Cross validation
+- Feature selection; R2adj, AIC. Forward and backward selection?
